[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/fray/editor/input_map_editor/input_inspectors/input_inspector.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/fray/editor/input_map_editor/input_inspectors/combination_inspector.gd" type="Script" id=2]
[ext_resource path="res://addons/fray/editor/ui/reordable_list/reordable_list.tscn" type="PackedScene" id=3]

[node name="CombinationInspector" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="ModeProperty" type="HBoxContainer" parent="ScrollContainer/PropertyContainer" index="0"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="ScrollContainer/PropertyContainer/ModeProperty" index="0"]
margin_top = 3.0
margin_right = 510.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Mode"

[node name="ModeSelector" type="OptionButton" parent="ScrollContainer/PropertyContainer/ModeProperty" index="1"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="PressHCORProperty" type="HBoxContainer" parent="ScrollContainer/PropertyContainer" index="1"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="ScrollContainer/PropertyContainer/PressHCORProperty" index="0"]
margin_top = 5.0
margin_right = 510.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Press Held Components On Release"

[node name="PressHCORCheckBox" type="CheckBox" parent="ScrollContainer/PropertyContainer/PressHCORProperty" index="1"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ComponentsProperty" type="HBoxContainer" parent="ScrollContainer/PropertyContainer" index="2"]
margin_top = 52.0
margin_right = 1024.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="ScrollContainer/PropertyContainer/ComponentsProperty" index="0"]
margin_right = 510.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Components"

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/PropertyContainer/ComponentsProperty" index="1"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="ComponentList" parent="ScrollContainer/PropertyContainer/ComponentsProperty/VBoxContainer" index="0" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 510.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="AddComponentButton" type="Button" parent="ScrollContainer/PropertyContainer/ComponentsProperty/VBoxContainer" index="1"]
margin_right = 510.0
margin_bottom = 20.0
text = "Add Component"

[connection signal="pressed" from="ScrollContainer/PropertyContainer/PressHCORProperty/PressHCORCheckBox" to="." method="_on_PressHCORCheckBox_pressed"]
[connection signal="item_removed" from="ScrollContainer/PropertyContainer/ComponentsProperty/VBoxContainer/ComponentList" to="." method="_on_ComponentList_item_removed"]
[connection signal="reordered" from="ScrollContainer/PropertyContainer/ComponentsProperty/VBoxContainer/ComponentList" to="." method="_on_ComponentList_reordered"]
[connection signal="pressed" from="ScrollContainer/PropertyContainer/ComponentsProperty/VBoxContainer/AddComponentButton" to="." method="_on_AddComponentButton_pressed"]
